# yt-notetaker

./: README.md  main.py  pyproject.toml  streamlit_app.py
yt_notetaker/: __init__.py  llm_utils.py  notetaker.py  prompts.py  schemas.py  transcript_utils.py
